@@ -2,6 +2,8 @@
 
 	* poke/poke.c (initialize): Exit if there is an error initializing
 	the poke incremental compiler.
+	* libpoke/libpoke.c (pk_compiler_new): Acknowledge errors from
+	pvm_init and pkl_new.
 
 2020-05-04  Jose E. Marchesi  <jemarch@gnu.org>
 
